--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/데이터베이스명?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: 여기에_DB_아이디_작성
-    password: 여기에_DB_비밀번호_작성
+    url: jdbc:mysql://localhost:3306/safe_light?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: iopem010
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
-      ddl-auto: update  # create, update, validate, none 중 택1
+      ddl-auto: none  # create, update, validate, none 중 택1
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
